# android-elf-symbol-resolver

./: LICENSE  README.md
symbol_lookup/: CMakeLists.txt  CMakePresets.json  symbol_lookup.c  symbol_lookup.h
